// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateProject (v1 slice, no install/git) > produces the expected file tree and artifacts for a Next.js + Mongo stack > Dockerfile 1`] = `
"# syntax=docker/dockerfile:1
FROM node:22-alpine AS base
WORKDIR /app

FROM base AS deps
COPY package.json ./
COPY pnpm-lock.yaml* ./
RUN corepack enable && pnpm install --frozen-lockfile

FROM deps AS build
COPY . .
RUN pnpm build

FROM base AS runtime
ENV NODE_ENV=production
COPY --from=build /app/public ./public
COPY --from=build /app/.next/standalone ./
COPY --from=build /app/.next/static ./.next/static
EXPOSE 3000
CMD ["node", "server.js"]
"
`;

exports[`generateProject (v1 slice, no install/git) > produces the expected file tree and artifacts for a Next.js + Mongo stack > docker-compose.yml 1`] = `
"services:
  mongodb:
    image: mongo:8
    restart: unless-stopped
    ports:
      - 27017:27017
    volumes:
      - mongo_data:/data/db
    healthcheck:
      test:
        - CMD
        - mongosh
        - --quiet
        - --eval
        - db.adminCommand('ping')
      interval: 5s
      timeout: 5s
      retries: 10
  redis:
    image: redis:8-alpine
    restart: unless-stopped
    command:
      - redis-server
      - --appendonly
      - yes
    ports:
      - 6379:6379
    volumes:
      - redis_data:/data
    healthcheck:
      test:
        - CMD
        - redis-cli
        - ping
      interval: 5s
      timeout: 3s
      retries: 10
  app:
    build: .
    env_file:
      - .env
    ports:
      - 3000:3000
    environment:
      NODE_ENV: \${NODE_ENV:-development}
    restart: unless-stopped
    depends_on:
      - mongodb
      - redis
volumes:
  mongo_data: null
  redis_data: null
"
`;

exports[`generateProject (v1 slice, no install/git) > produces the expected file tree and artifacts for a Next.js + Mongo stack > file tree 1`] = `
[
  ".dockerignore",
  ".env",
  ".env.example",
  ".prettierignore",
  ".prettierrc",
  "docker-compose.yml",
  "Dockerfile",
  "eslint.config.mjs",
  "next-env.d.ts",
  "next.config.mjs",
  "package.json",
  "README.md",
  "src/app/api/health/route.ts",
  "src/app/layout.tsx",
  "src/app/page.tsx",
  "src/lib/db.ts",
  "src/lib/redis.ts",
  "tsconfig.json",
]
`;

exports[`generateProject (v1 slice, no install/git) > produces the expected file tree and artifacts for a Next.js + Mongo stack > package.json 1`] = `
"{
  "name": "web-app",
  "version": "0.1.0",
  "private": true,
  "scripts": {
    "build": "next build",
    "dev": "next dev",
    "format": "prettier --write .",
    "lint": "eslint .",
    "start": "next start",
    "start:dev": "next dev"
  },
  "dependencies": {
    "ioredis": "^5.4.1",
    "mongoose": "^8.7.0",
    "next": "^15.0.0",
    "react": "^18.3.1",
    "react-dom": "^18.3.1"
  },
  "devDependencies": {
    "@types/node": "^22.7.0",
    "@types/react": "^18.3.11",
    "@types/react-dom": "^18.3.0",
    "eslint": "^9.11.0",
    "eslint-config-prettier": "^9.1.0",
    "prettier": "^3.3.3",
    "typescript": "^5.6.2",
    "typescript-eslint": "^8.7.0"
  }
}
"
`;

exports[`generateProject (v1 slice, no install/git) > produces the expected file tree and artifacts for a Next.js + Mongo stack > src/lib/db.ts 1`] = `
"import mongoose from 'mongoose';

const uri = process.env.MONGODB_URI ?? 'mongodb://localhost:27017/app';

// Reuse the connection across hot reloads / lambda invocations.
let promise: Promise<typeof mongoose> | undefined;

export function db(): Promise<typeof mongoose> {
  promise ??= mongoose.connect(uri);
  return promise;
}
"
`;

exports[`generateProject (v1 slice, no install/git) > produces the expected file tree and artifacts for an ASP.NET Minimal API + Postgres stack > Dockerfile 1`] = `
"# syntax=docker/dockerfile:1
FROM mcr.microsoft.com/dotnet/sdk:10.0 AS build
WORKDIR /src
COPY *.csproj ./
RUN dotnet restore
COPY . .
RUN dotnet publish -c Release -o /app/publish

FROM mcr.microsoft.com/dotnet/aspnet:10.0 AS runtime
WORKDIR /app
COPY --from=build /app/publish .
EXPOSE 3000
ENV ASPNETCORE_URLS=http://+:3000
ENTRYPOINT ["dotnet", "orders_api.dll"]
"
`;

exports[`generateProject (v1 slice, no install/git) > produces the expected file tree and artifacts for an ASP.NET Minimal API + Postgres stack > Program.cs 1`] = `
"using Microsoft.EntityFrameworkCore;
using orders_api.Data;
using StackExchange.Redis;

var builder = WebApplication.CreateBuilder(args);

builder.Services.AddDbContext<AppDbContext>(options =>
    options.UseNpgsql(Environment.GetEnvironmentVariable("DATABASE_URL")));
builder.Services.AddSingleton<IConnectionMultiplexer>(_ =>
    ConnectionMultiplexer.Connect(Environment.GetEnvironmentVariable("REDIS_URL") ?? "localhost:6379"));

var app = builder.Build();

var startedAt = DateTimeOffset.UtcNow;
app.MapGet("/", () => Results.Ok(new
{
    status = "ok",
    uptime = Math.Max(0, (DateTimeOffset.UtcNow - startedAt).TotalSeconds),
}));

app.Run();
"
`;

exports[`generateProject (v1 slice, no install/git) > produces the expected file tree and artifacts for an ASP.NET Minimal API + Postgres stack > README.md 1`] = `
"# orders-api

Generated with \`create-app\`. This project has no runtime dependency on the generator.

## Stack

- **Backend:** ASP.NET Core (Minimal API)
- **Database:** PostgreSQL
- **Cache:** Redis
- **Containerization:** Docker + Docker Compose

## Components

### ASP.NET Core (Minimal API)

\`Program.cs\` wires up the app top-to-bottom: database/cache registration, then route handlers. Add more \`app.MapGet\`/\`app.MapPost\` calls per endpoint, or move groups of them into extension methods as the app grows.

### PostgreSQL

\`DATABASE_URL\` is the Postgres connection string. Node backends use TypeORM (\`synchronize\` is enabled outside production; switch to migrations before deploying). ASP.NET backends use EF Core via \`Npgsql.EntityFrameworkCore.PostgreSQL\`, registered on \`AppDbContext\` in \`Program.cs\`.

### Redis

\`REDIS_URL\` is the Redis connection string. NestJS: inject the \`@Global()\` \`RedisService\` (\`redisService.client\`). Next.js: import \`redis\` from \`src/lib/redis.ts\`. ASP.NET: a singleton \`IConnectionMultiplexer\` is registered in \`Program.cs\` via \`StackExchange.Redis\`.

### Docker

\`docker build -t <name> .\` builds the runtime image; the Compose file uses it.

### Docker Compose

\`docker compose up -d\` starts the app and its dependencies.

## Getting started

\`\`\`bash
dotnet restore
docker compose up -d
dotnet run
\`\`\`
"
`;

exports[`generateProject (v1 slice, no install/git) > produces the expected file tree and artifacts for an ASP.NET Minimal API + Postgres stack > file tree 1`] = `
[
  ".dockerignore",
  ".env",
  ".env.example",
  "appsettings.Development.json",
  "appsettings.json",
  "Data/AppDbContext.cs",
  "docker-compose.yml",
  "Dockerfile",
  "orders_api.csproj",
  "Program.cs",
  "Properties/launchSettings.json",
  "README.md",
]
`;

exports[`generateProject (v1 slice, no install/git) > produces the expected file tree and artifacts for an ASP.NET Minimal API + Postgres stack > orders_api.csproj 1`] = `
"<Project Sdk="Microsoft.NET.Sdk.Web">

  <PropertyGroup>
    <TargetFramework>net10.0</TargetFramework>
    <Nullable>enable</Nullable>
    <ImplicitUsings>enable</ImplicitUsings>
    <RootNamespace>orders_api</RootNamespace>
    <AssemblyName>orders_api</AssemblyName>
  </PropertyGroup>

  <ItemGroup>
    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.10" />
    <PackageReference Include="StackExchange.Redis" Version="2.8.16" />
  </ItemGroup>

</Project>
"
`;

exports[`generateProject (v1 slice, no install/git) > produces the expected file tree and artifacts for an ASP.NET Web API + Mongo stack > Controllers/HealthController.cs 1`] = `
"using Microsoft.AspNetCore.Mvc;

namespace catalog_api.Controllers;

[ApiController]
[Route("")]
public class HealthController : ControllerBase
{
    private static readonly DateTimeOffset StartedAt = DateTimeOffset.UtcNow;

    [HttpGet]
    public IActionResult Get() => Ok(new
    {
        status = "ok",
        // clamp at 0 — StartedAt is a lazily-initialized static field, so the very
        // first request can observe a few microseconds of clock jitter as negative
        uptime = Math.Max(0, (DateTimeOffset.UtcNow - StartedAt).TotalSeconds),
    });
}
"
`;

exports[`generateProject (v1 slice, no install/git) > produces the expected file tree and artifacts for an ASP.NET Web API + Mongo stack > Program.cs 1`] = `
"using MongoDB.Driver;

var builder = WebApplication.CreateBuilder(args);

builder.Services.AddControllers();

builder.Services.AddSingleton<IMongoClient>(_ =>
    new MongoClient(Environment.GetEnvironmentVariable("MONGODB_URI") ?? "mongodb://localhost:27017/app"));

var app = builder.Build();

app.MapControllers();

app.Run();
"
`;

exports[`generateProject (v1 slice, no install/git) > produces the expected file tree and artifacts for an ASP.NET Web API + Mongo stack > catalog_api.csproj 1`] = `
"<Project Sdk="Microsoft.NET.Sdk.Web">

  <PropertyGroup>
    <TargetFramework>net10.0</TargetFramework>
    <Nullable>enable</Nullable>
    <ImplicitUsings>enable</ImplicitUsings>
    <RootNamespace>catalog_api</RootNamespace>
    <AssemblyName>catalog_api</AssemblyName>
  </PropertyGroup>

  <ItemGroup>
    <PackageReference Include="MongoDB.Driver" Version="3.11.2" />
  </ItemGroup>

</Project>
"
`;

exports[`generateProject (v1 slice, no install/git) > produces the expected file tree and artifacts for an ASP.NET Web API + Mongo stack > file tree 1`] = `
[
  ".dockerignore",
  ".env",
  ".env.example",
  "appsettings.Development.json",
  "appsettings.json",
  "catalog_api.csproj",
  "Controllers/HealthController.cs",
  "docker-compose.yml",
  "Dockerfile",
  "Program.cs",
  "Properties/launchSettings.json",
  "README.md",
]
`;

exports[`generateProject (v1 slice, no install/git) > produces the expected file tree and composed artifacts > .env 1`] = `
"# --- postgres ---
# TypeORM connection string (host 'postgres' = the compose service)
DATABASE_URL=postgres://app:app@postgres:5432/app
POSTGRES_USER=app
POSTGRES_PASSWORD=app
POSTGRES_DB=app

# --- redis ---
# ioredis connection string (host 'redis' = the compose service)
REDIS_URL=redis://redis:6379
"
`;

exports[`generateProject (v1 slice, no install/git) > produces the expected file tree and composed artifacts > Dockerfile 1`] = `
"# syntax=docker/dockerfile:1
FROM node:22-alpine AS base
WORKDIR /app

FROM base AS deps
COPY package.json ./
COPY package-lock.json* ./
RUN npm ci --no-audit --no-fund || npm install --no-audit --no-fund

FROM deps AS build
COPY . .
RUN npm run build

FROM base AS runtime
ENV NODE_ENV=production
COPY --from=deps /app/node_modules ./node_modules
COPY --from=build /app/dist ./dist
COPY package.json ./
EXPOSE 3000
CMD ["node", "dist/main.js"]
"
`;

exports[`generateProject (v1 slice, no install/git) > produces the expected file tree and composed artifacts > README.md 1`] = `
"# voting-app

Generated with \`create-app\`. This project has no runtime dependency on the generator.

## Stack

- **Backend:** NestJS
- **Database:** PostgreSQL
- **Cache:** Redis
- **Containerization:** Docker + Docker Compose
- **Package manager:** npm

## Components

### NestJS

Nest bootstraps in \`src/main.ts\`. Feature wiring (database, cache) is composed into \`src/app.module.ts\` by the generator based on the components you picked.

### PostgreSQL

\`DATABASE_URL\` is the Postgres connection string. Node backends use TypeORM (\`synchronize\` is enabled outside production; switch to migrations before deploying). ASP.NET backends use EF Core via \`Npgsql.EntityFrameworkCore.PostgreSQL\`, registered on \`AppDbContext\` in \`Program.cs\`.

### Redis

\`REDIS_URL\` is the Redis connection string. NestJS: inject the \`@Global()\` \`RedisService\` (\`redisService.client\`). Next.js: import \`redis\` from \`src/lib/redis.ts\`. ASP.NET: a singleton \`IConnectionMultiplexer\` is registered in \`Program.cs\` via \`StackExchange.Redis\`.

### Docker

\`docker build -t <name> .\` builds the runtime image; the Compose file uses it.

### Docker Compose

\`docker compose up -d\` starts the app and its dependencies.

## Getting started

\`\`\`bash
npm install
docker compose up -d
npm run start:dev
\`\`\`
"
`;

exports[`generateProject (v1 slice, no install/git) > produces the expected file tree and composed artifacts > docker-compose.yml 1`] = `
"services:
  postgres:
    image: postgres:18-alpine
    restart: unless-stopped
    environment:
      POSTGRES_USER: app
      POSTGRES_PASSWORD: app
      POSTGRES_DB: app
    ports:
      - 5432:5432
    volumes:
      - postgres_data:/var/lib/postgresql/data
    healthcheck:
      test:
        - CMD-SHELL
        - pg_isready -U app -d app
      interval: 5s
      timeout: 5s
      retries: 10
  redis:
    image: redis:8-alpine
    restart: unless-stopped
    command:
      - redis-server
      - --appendonly
      - yes
    ports:
      - 6379:6379
    volumes:
      - redis_data:/data
    healthcheck:
      test:
        - CMD
        - redis-cli
        - ping
      interval: 5s
      timeout: 3s
      retries: 10
  app:
    build: .
    env_file:
      - .env
    ports:
      - 3000:3000
    environment:
      NODE_ENV: \${NODE_ENV:-development}
    restart: unless-stopped
    depends_on:
      - postgres
      - redis
volumes:
  postgres_data: null
  redis_data: null
"
`;

exports[`generateProject (v1 slice, no install/git) > produces the expected file tree and composed artifacts > file tree 1`] = `
[
  ".dockerignore",
  ".env",
  ".env.example",
  ".prettierignore",
  ".prettierrc",
  "docker-compose.yml",
  "Dockerfile",
  "eslint.config.mjs",
  "nest-cli.json",
  "package.json",
  "README.md",
  "src/app.controller.ts",
  "src/app.module.ts",
  "src/app.service.ts",
  "src/main.ts",
  "src/redis/redis.module.ts",
  "src/redis/redis.service.ts",
  "tsconfig.build.json",
  "tsconfig.json",
]
`;

exports[`generateProject (v1 slice, no install/git) > produces the expected file tree and composed artifacts > package.json 1`] = `
"{
  "name": "voting-app",
  "version": "0.1.0",
  "private": true,
  "scripts": {
    "build": "nest build",
    "format": "prettier --write .",
    "lint": "eslint .",
    "start": "node dist/main.js",
    "start:dev": "nest start --watch",
    "start:prod": "node dist/main.js"
  },
  "dependencies": {
    "@nestjs/common": "^10.4.0",
    "@nestjs/core": "^10.4.0",
    "@nestjs/platform-express": "^10.4.0",
    "@nestjs/typeorm": "^10.0.2",
    "ioredis": "^5.4.1",
    "pg": "^8.12.0",
    "reflect-metadata": "^0.2.2",
    "rxjs": "^7.8.1",
    "typeorm": "^0.3.20"
  },
  "devDependencies": {
    "@nestjs/cli": "^10.4.0",
    "@nestjs/schematics": "^10.1.4",
    "@types/express": "^4.17.21",
    "@types/node": "^22.7.0",
    "eslint": "^9.11.0",
    "eslint-config-prettier": "^9.1.0",
    "prettier": "^3.3.3",
    "source-map-support": "^0.5.21",
    "ts-loader": "^9.5.1",
    "ts-node": "^10.9.2",
    "typescript": "^5.6.2",
    "typescript-eslint": "^8.7.0"
  }
}
"
`;

exports[`generateProject (v1 slice, no install/git) > produces the expected file tree and composed artifacts > src/app.module.ts 1`] = `
"import { Module } from '@nestjs/common';
import { TypeOrmModule } from '@nestjs/typeorm';
import { RedisModule } from './redis/redis.module';
import { AppController } from './app.controller';
import { AppService } from './app.service';

@Module({
  imports: [
    TypeOrmModule.forRoot({
      type: 'postgres',
      url: process.env.DATABASE_URL,
      autoLoadEntities: true,
      synchronize: process.env.NODE_ENV !== 'production',
    }),
    RedisModule,
  ],
  controllers: [AppController],
  providers: [AppService],
})
export class AppModule {}
"
`;
